@@ -53,6 +53,8 @@ public class MigrationManager
 {
     private static final Logger logger = LoggerFactory.getLogger(MigrationManager.class);
 
+    private static final boolean FLUSH_LOCAL_CHANGES = Boolean.valueOf(System.getProperty("cassandra.test.flush_local_schema_changes", "true"));
+
     public static final MigrationManager instance = new MigrationManager();
 
     private static final RuntimeMXBean runtimeMXBean = ManagementFactory.getRuntimeMXBean();
@@ -471,7 +473,7 @@ public class MigrationManager
         {
             try
             {
-                SchemaKeyspace.mergeSchema(Collections.singletonList(schema), false);
+                SchemaKeyspace.mergeSchema(Collections.singletonList(schema), FLUSH_LOCAL_CHANGES);
             }
             catch (IOException e)
             {
